<resources>

	<string name="app_name">BiliNyan</string>

	<!-- Common Resources -->
	<string name="action_settings">Settings</string>
	<string name="snackbar_try_again">Try again</string>

	<!-- Navigation Items -->
	<string name="item_home">Home</string>
	<string name="item_following">Following</string>
	<string name="item_discover">Discover</string>
	<string name="item_downloaded">Downloaded videos</string>

	<string name="sub_account">Account</string>
	<string name="item_favourite">My favourites</string>
	<string name="item_history">History</string>
	<string name="item_settings">Settings</string>

	<!-- Home -->
	<string-array name="sections">
		<item>@string/section_recommend</item>
		<item>@string/section_anime</item>
		<item>@string/section_cartoon</item>
		<item>@string/section_music</item>
		<item>@string/section_dance</item>
		<item>@string/section_game</item>
		<item>@string/section_technology</item>
		<item>@string/section_entertainment</item>
		<item>@string/section_funny</item>
		<item>@string/section_movie</item>
		<item>@string/section_tv_series</item>
	</string-array>

	<string name="tips_cannot_get_banner">Failed to get banner.</string>

	<!-- Video View Activity -->
	<string name="info_play_times_format">%d</string>
	<string name="info_reviews_format">%d</string>
	<string name="header_title_description">Description</string>
	<string name="header_title_video_part">Video parts</string>

	<!-- User Info Activity -->
	<string name="title_user_info">User information</string>
	<string name="type_no_watching_unknown">Watch it</string>
	<string name="type_no_watching_male">Watch him</string>
	<string name="type_no_watching_female">Watch her</string>
	<string name="type_watching">Watching</string>
	<string name="type_following_you">Following you</string>
	<string name="type_friend">Friend</string>
	<string name="info_following_format">Following %d</string>
	<string name="info_fans_format">Fans %d</string>

	<!-- Video Item Info -->
	<string name="item_info_uper_format">Author: %s</string>

	<!-- User List Activity -->
	<string name="title_user_list">User list</string>
	<string name="title_user_list_following">Following users</string>
	<string name="title_user_list_fans">Fans list</string>

	<!-- Simple Browser Activity -->
	<string name="title_browser">Browse page</string>
	<string name="action_reload">Reload</string>
	<string name="action_forward">Forward</string>
	<string name="action_open_outside">Open with browser</string>
	<string name="action_copy_link">Copy link</string>
	<string name="action_share">Share....</string>

	<string name="tips_copy_link_okay">Link has been copied to clipboard.</string>

</resources>
